--- a/assets/js/translations/ru.json
+++ b/assets/js/translations/ru.json
@@ -59,7 +59,7 @@
     "title": "Фотогалерея"
   },
   "footer": {
-    "organization": "И.П. Муниципальный центр развития предпринимательства (CMDA)",
+    "organization": "М.П. Муниципальный центр развития предпринимательства (CMDA)",
     "quick_links": "Быстрые ссылки",
     "contact_platform": "Платформа для подачи заявок",
     "rights": "© 2025 CMDA – Муниципальный центр развития предпринимательства. Все права защищены."
@@ -186,6 +186,7 @@
       "badge": "Промышленная платформа",
       "description": "Кишиневская многофункциональная промышленная платформа (PIM) - это стратегический инфраструктурный проект с общими инвестициями в размере 27,8 млн леев, направленный на создание благоприятной среды для развития промышленных предприятий.",
       "investment": "Общие инвестиции",
+      "residents": "Промышленные резиденты",
       "jobs": "Предполагаемые рабочие места",
       "features_title": "Характеристики:",
       "feature1": "Современная инфраструктура для производства и услуг",
@@ -219,6 +220,7 @@
   "partners_page": {
     "title": "Партнерства",
     "subtitle": "CMDA развивает стратегические партнерства на местном, национальном и международном уровнях для подключения предпринимателей из Кишинева к ресурсам, экспертизе и финансированию.",
+    "active_programs": "Активные программы",
     "international": {
       "title": "Международные партнеры",
       "subtitle": "Мы сотрудничаем с учреждениями и организациями по всей Европе, чтобы привнести лучшие практики и возможности для предпринимателей Кишинева."
@@ -246,7 +248,31 @@
     "phone": "Телефон",
     "email": "Электронная почта",
     "schedule": "Рабочие часы",
+    "schedule_hours": "Понедельник – Пятница: 08:00 – 17:00",
     "platform": "Онлайн-платформа",
-    "send_message": "Отправить нам сообщение"
+    "send_message": "Отправить нам сообщение",
+    "form": {
+      "full_name": "Полное имя",
+      "email": "Электронная почта",
+      "phone": "Телефон",
+      "request_type": "Тип запроса",
+      "select_type": "Выберите тип запроса",
+      "consulting": "Консультирование",
+      "startup_program": "Программа STARTUP",
+      "incubator": "Инкубатор",
+      "partnerships": "Партнерства",
+      "other": "Другое",
+      "message": "Сообщение",
+      "send_button": "Отправить сообщение",
+      "success_message": "Ваше сообщение успешно отправлено! Мы свяжемся с вами в ближайшее время."
+    },
+    "location": "Местоположение",
+    "useful_links": "Полезные ссылки",
+    "available_programs": "Доступные программы",
+    "all_programs_desc": "Посмотреть все программы поддержки",
+    "infrastructure": "Инфраструктура",
+    "infrastructure_desc": "Инкубатор и промышленная платформа",
+    "apply_online": "Подать заявку онлайн",
+    "apply_online_desc": "Заполнить заявку на платформе"
   }
 }
